--- a/smart4_portal/templates/base.html
+++ b/smart4_portal/templates/base.html
@@ -45,12 +45,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 
     {% block css %}
-		<!-- Latest compiled and minified Bootstrap 4 Alpha 4 CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous"> 
-		{% compress css %}
-		<link href="/static/css/project.css" rel="stylesheet"> 
-		{% endcompress %} 
-	{% endblock %}
+    <!-- Latest compiled and minified Bootstrap 4 Alpha 4 CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous"> {% compress css %}
+    <link href="/static/css/project.css" rel="stylesheet"> {% endcompress %} {% endblock %}
     <script src="https://use.fontawesome.com/dde3f58fc4.js"></script>
 </head>
 
@@ -64,8 +61,7 @@
                 </a>
                 <button type="button" class="navbar-toggler hidden-sm-up pull-xs-right" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
           &#9776;
-        </button> 
-			{% if request.user.is_authenticated %}
+        </button>
                 <div class="collapse navbar-toggleable-xs" id="bs-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="nav-item{% if request.resolver_match.url_name == 'home' %} active{% endif %}">
@@ -88,22 +84,20 @@
                             <a class="nav-link" href="{% url 'stat' %}">Water map</a>
                         </li>
                     </ul>
-			{% endif %}
                     <ul class="nav navbar-nav pull-xs-right">
 
-                        {% load inlist %} 
-						{% if request.user.is_authenticated %}
-                        <li class="nav-item{% if request.resolver_match.url_name|InList:'detail,update' %} active{% endif %}">
-                            <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>
+                        {% load inlist %} {#% if request.user.is_authenticated %#}
+                        <li class="nav-item ">
+                            <a class="nav-link{% if request.resolver_match.url_name == 'userpro' %} active{% endif %}" href="{% url 'userpro' %}">{% trans "My Profile" %}</a>
                         </li>
-                        <li class="nav-item{% if request.resolver_match.url_name == 'account_logout' %} active{% endif %}" href="{% url 'account_logout' %}">
+                        <!--li class="nav-item{# if request.resolver_match.url_name == 'account_logout' #} active{# endif #}" href="{% url 'account_logout' %}">
                             <a href="{% url 'account_logout' %}" class="nav-link">{% trans "Sign Out" %}</a>
-                        </li>
-                        {% else %}
-                        <li class="nav-item{% if request.resolver_match.url_name == 'account_login' %} active{% endif %}">
+                        </li-->
+                        {#% else %#}
+                        <!--li class="nav-item{#% if request.resolver_match.url_name == 'account_login' %#} active{#% endif %#}">
                             <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
-                        </li>
-                        {% endif %}
+                        </li-->
+                        {#% endif %#}
                     </ul>
                 </div>
             </div>
@@ -113,28 +107,11 @@
     <div class="container{% if request.resolver_match.url_name|InList:'home,stat' %}-fluid{% endif %}">
         <div class="row">
             <div class="main-content{% if request.resolver_match.url_name|InList:'home,stat' %}-map{% endif %}">
-                {% if request.user.is_authenticated or request.resolver_match.url_name|InList:'account_login,account_signup,account_reset_password,account_reset_password_done,account_reset_password_from_key,account_reset_password_from_key_done' %} 
-					{% if request.resolver_match.url_name != 'home' and messages %} 
-						{% for message in messages %}
-							<div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
-						{% endfor %} 
-					{% endif %} 
-					{% block content %}
-						<p>This is not the page you were looking for.</p>
-					{% endblock content %} 
-				{% else %}
-					<div class="row">
-						<div class="col-md-6 offset-md-3">
-
-							<h1>Public access denied</h1>
-
-							<p>We are sorry, but public access is currently denied.</p>
-							<p>Try to </p>
-							<a class="btn btn-primary" href="{% url 'account_login' %}" role="button">{% trans "Sign In" %}</a>
-
-						</div>
-					</div>
-                {% endif %}
+                {% if request.resolver_match.url_name != 'home' and messages %} {% for message in messages %}
+                <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
+                {% endfor %} {% endif %} {% block content %}
+                <p>This is not the page you were looking for.</p>
+                {% endblock content %}
             </div>
         </div>
     </div>
@@ -144,7 +121,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <a target="_blank" href="http://smart4.tech/">About</a>&nbsp;&nbsp; {% if request.user.is_authenticated %} <a href="{% url 'partners' %}">Partners</a> {% endif %}
+                    <a target="_blank" href="http://smart4.tech/">About</a>&nbsp;&nbsp; <a href="{% url 'partners' %}">Partners</a>
                 </div>
                 <div class="col-md-4">
                     <small>©
@@ -153,7 +130,6 @@
 
             </script> Smart 4.0 All rights reserved.</small>
                 </div>
-                {% if request.user.is_authenticated %}
                 <div class="col-md-3">
                     <div class="download-from">
                         <a class="download-link" target="_blank" href="#">
@@ -189,25 +165,22 @@
                     <!--social end-->
 
                 </div>
-                {% endif %}
             </div>
         </div>
     </footer>
 
-    {% block modal %}
-	{% endblock modal %}
+    {% block modal %} {% endblock modal %}
 
     <!-- Le javascript
     ================================================== -->
     {% block javascript %}
-		<!-- Required by Bootstrap v4 Alpha 4 -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+    <!-- Required by Bootstrap v4 Alpha 4 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 
-		{% compress js %}
-		<script src="/static/js/project.js"></script>
-		{% endcompress %} 
-	{% endblock javascript %}
+    {% compress js %}
+    <script src="/static/js/project.js"></script>
+    {% endcompress %} {% endblock javascript %}
 </body>
 
 </html>
